# relate

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/relate/: Cargo.toml
crates/relate-macros/: Cargo.toml
crates/relate-macros/src/: lib.rs
crates/relate-macros/src/core/: codegen.rs  mod.rs  parse_helpers.rs  types.rs
crates/relate-macros/src/from_derive/: generator.rs  mod.rs  parser.rs  types.rs
crates/relate-macros/src/relate/: generator.rs  mod.rs  parser.rs  types.rs
crates/relate-macros/tests/: expand_tests.rs  from_derive_tests.rs  relate_tests.rs  trybuild_tests.rs
crates/relate-macros/tests/expand/: basic_relate.expanded.rs  basic_relate.rs  relate_bidirectional.expanded.rs  relate_bidirectional.rs  relate_clone_modes.expanded.rs  relate_clone_modes.rs  relate_collection_map.expanded.rs  relate_collection_map.rs  relate_defaults.expanded.rs  relate_defaults.rs  relate_try_from.expanded.rs  relate_try_from.rs  relate_with_rename.expanded.rs  relate_with_rename.rs  relate_with_transforms.expanded.rs  relate_with_transforms.rs
crates/relate-macros/tests/fail/: bidirectional_missing_reverse.rs  bidirectional_missing_reverse.stderr  define_both_unsupported.rs  define_both_unsupported.stderr  derive_no_relate_attr.rs  derive_no_relate_attr.stderr  derive_unknown_option.rs  derive_unknown_option.stderr  duplicate_field.rs  duplicate_field.stderr  empty_collection_brackets.rs  empty_collection_brackets.stderr  invalid_clone_mode.rs  invalid_clone_mode.stderr  invalid_default_syntax.rs  invalid_default_syntax.stderr  missing_field.rs  missing_field.stderr  try_from_missing_question.rs  try_from_missing_question.stderr  unknown_field.rs  unknown_field.stderr  unknown_source_field.rs  unknown_source_field.stderr
crates/relate-macros/tests/from_derive/: basic.rs  bidirectional.rs  (+12 more)
crates/relate/src/: error.rs  lib.rs
(+24 files in other folders)
